modified build rules
Signed-off-by: Sergey Isakov <isakov-sl@bk.ru>

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,8 @@
 *.lock
 *.bak
 *~
+.cache
+Conf/.cache
 
 # /CloverPackage/
 /CloverPackage/sym/
@@ -44,7 +46,6 @@
 
 # /
 /Version.h
-/vers.txt
 
 # /rEFIt_UEFI/
 /rEFIt_UEFI/Version.h
