buildme is compatible with Linux
builme script should be able to run in Linux, although dependencies must be installed by hand.
Fixed also some messages and errors if not running from a git repository. The case when the user download the zip snapshot from github.

--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,6 @@
 *~
 .cache
 Conf/.cache
-Conf/BuildEnv.sh
 Conf/target.txt
 
 # /CloverPackage/
@@ -72,3 +71,5 @@ CloverUpdater.strings
 CloverPrefpane.strings
 #CloverPackage/CloverPrefpane/src/*.lproj
 
+BaseTools/Source/Python/build/BuildReport.pyc
+Conf/BuildEnv.sh
