Fixed GCC compilation in macOS

--- a/.gitignore
+++ b/.gitignore
@@ -73,3 +73,4 @@ CloverPrefpane.strings
 
 BaseTools/Source/Python/build/BuildReport.pyc
 Conf/BuildEnv.sh
+BaseTools/Source/Python/build/BuildReport.pyc
