add languages except en to gitignore
Signed-off-by: Sergey Isakov <isakov-sl@bk.ru>

--- a/.gitignore
+++ b/.gitignore
@@ -40,6 +40,49 @@ Conf/target.txt
 /CloverPackage/CloverV2/drivers-Off/drivers32UEFI/
 /CloverPackage/CloverV2/drivers-Off/drivers64/
 /CloverPackage/CloverV2/drivers-Off/drivers64UEFI/
+/CloverPackage/CloverPrefpane/src/de.lproj/
+/CloverPackage/CloverPrefpane/src/es.lproj/
+/CloverPackage/CloverPrefpane/src/fr.lproj/
+/CloverPackage/CloverPrefpane/src/hr.lproj/
+/CloverPackage/CloverPrefpane/src/id.lproj/
+/CloverPackage/CloverPrefpane/src/it.lproj/
+/CloverPackage/CloverPrefpane/src/ja.lproj/
+/CloverPackage/CloverPrefpane/src/ko.lproj/
+/CloverPackage/CloverPrefpane/src/lv.lproj/
+/CloverPackage/CloverPrefpane/src/nl.lproj/
+/CloverPackage/CloverPrefpane/src/pl.lproj/
+/CloverPackage/CloverPrefpane/src/pt-BR.lproj/
+/CloverPackage/CloverPrefpane/src/pt.lproj/
+/CloverPackage/CloverPrefpane/src/ro.lproj/
+/CloverPackage/CloverPrefpane/src/ru.lproj/
+/CloverPackage/CloverPrefpane/src/tr.lproj/
+/CloverPackage/CloverPrefpane/src/uk.lproj/
+/CloverPackage/CloverPrefpane/src/uk_UA.lproj/
+/CloverPackage/CloverPrefpane/src/vi.lproj/
+/CloverPackage/CloverPrefpane/src/zh_CN.lproj/
+/CloverPackage/CloverPrefpane/src/zh_TW.lproj/
+/CloverPackage/CloverUpdater/src/de.lproj/
+/CloverPackage/CloverUpdater/src/es.lproj/
+/CloverPackage/CloverUpdater/src/fr.lproj/
+/CloverPackage/CloverUpdater/src/hr.lproj/
+/CloverPackage/CloverUpdater/src/id.lproj/
+/CloverPackage/CloverUpdater/src/it.lproj/
+/CloverPackage/CloverUpdater/src/ja.lproj/
+/CloverPackage/CloverUpdater/src/ko.lproj/
+/CloverPackage/CloverUpdater/src/lv.lproj/
+/CloverPackage/CloverUpdater/src/nl.lproj/
+/CloverPackage/CloverUpdater/src/pl.lproj/
+/CloverPackage/CloverUpdater/src/pt-BR.lproj/
+/CloverPackage/CloverUpdater/src/pt.lproj/
+/CloverPackage/CloverUpdater/src/ro.lproj/
+/CloverPackage/CloverUpdater/src/ru.lproj/
+/CloverPackage/CloverUpdater/src/tr.lproj/
+/CloverPackage/CloverUpdater/src/uk.lproj/
+/CloverPackage/CloverUpdater/src/uk_UA.lproj/
+/CloverPackage/CloverUpdater/src/vi.lproj/
+/CloverPackage/CloverUpdater/src/zh_CN.lproj/
+/CloverPackage/CloverUpdater/src/zh_TW.lproj/
+
 
 # /FileSystems/HFSPlus/
 /FileSystems/HFSPlus/Ia32/
