--- a/BaseTools/Conf/build_rule.template
+++ b/BaseTools/Conf/build_rule.template
@@ -331,7 +331,7 @@
         "$(OBJCOPY)" $(OBJCOPY_FLAGS) ${dst}
 
 
-[Static-Library-File.USER_DEFINED]
+[Static-Library-File.USER_DEFINED, Static-Library-File.HOST_APPLICATION]
     <InputFile>
         *.lib
 
@@ -365,11 +365,11 @@
         ?.dll
 
     <OutputFile>
-        $(DEBUG_DIR)(+)$(MODULE_NAME).efi
+        $(OUTPUT_DIR)(+)$(MODULE_NAME).efi
 
     <Command.MSFT, Command.INTEL, Command.RVCT>
         "$(GENFW)" -e $(MODULE_TYPE) -o ${dst} ${src} $(GENFW_FLAGS)
-        $(CP) ${dst} $(OUTPUT_DIR)
+        $(CP) ${dst} $(DEBUG_DIR)
         $(CP) ${dst} $(BIN_DIR)(+)$(MODULE_NAME_GUID).efi
         -$(CP) $(DEBUG_DIR)(+)*.map $(OUTPUT_DIR)
         -$(CP) $(DEBUG_DIR)(+)*.pdb $(OUTPUT_DIR) 
@@ -382,11 +382,11 @@
         #The below 2 lines are only needed for UNIXGCC tool chain, which generates PE image directly
         #
         @-$(OBJCOPY) $(OBJCOPY_ADDDEBUGFLAG) ${src}
-        #-$(CP) $(DEBUG_DIR)(+)$(MODULE_NAME).debug $(BIN_DIR)
+        #-$(CP) $(DEBUG_DIR)(+)$(MODULE_NAME).debug $(BIN_DIR)(+)$(MODULE_NAME_GUID).debug
         @"echo" [OBJCOPY] $(MODULE_NAME)
 
         @"$(GENFW)" -e $(MODULE_TYPE) -o ${dst} ${src} $(GENFW_FLAGS)
-        @$(CP) ${dst} $(OUTPUT_DIR)
+        @$(CP) ${dst} $(DEBUG_DIR)
         @$(CP) ${dst} $(BIN_DIR)(+)$(MODULE_NAME_GUID).efi
         @-$(CP) $(DEBUG_DIR)(+)*.map $(OUTPUT_DIR)
         @"echo" [GENFW] $(MODULE_NAME)
@@ -399,7 +399,7 @@
         # create symbol file for GDB debug
         #@-$(DSYMUTIL) ${src}
         @"$(GENFW)" -e $(MODULE_TYPE) -o ${dst} $(DEBUG_DIR)(+)$(MODULE_NAME).pecoff $(GENFW_FLAGS)
-        @$(CP) ${dst} $(OUTPUT_DIR)
+        @$(CP) ${dst} $(DEBUG_DIR)
         @$(CP) ${dst} $(BIN_DIR)(+)$(MODULE_NAME_GUID).efi
         @-$(CP) $(DEBUG_DIR)(+)*.map $(OUTPUT_DIR)
         @"echo" [GENFW] $(MODULE_NAME)
