add a possibility to set custom SmbiosVersion
Signed-off-by: Sergey Isakov <isakov-sl@bk.ru>

--- a/CloverPackage/CloverV2/EFI/CLOVER/config-sample.plist
+++ b/CloverPackage/CloverV2/EFI/CLOVER/config-sample.plist
@@ -932,6 +932,8 @@
 	</array>
 	<key>SMBIOS</key>
 	<dict>
+    <key>#SmbiosVersion</key>
+    <integer>0x0206</integer>
 		<key>#Slots</key>
 		<array>
 			<dict>
