--- a/CloverPackage/CloverV2/EFI/CLOVER/config-sample.plist
+++ b/CloverPackage/CloverV2/EFI/CLOVER/config-sample.plist
@@ -757,6 +757,8 @@
 		<false/>
 		<key>UseIntelHDMI</key>
 		<false/>
+		<key>#NoDefaultProperties</key>
+		<true/>
 		<key>#SetIntelBacklight</key>
 		<false/>
 		<key>#SetIntelMaxBacklight</key>
