--- a/CloverPackage/CloverV2/EFI/CLOVER/config-sample.plist
+++ b/CloverPackage/CloverV2/EFI/CLOVER/config-sample.plist
@@ -527,7 +527,21 @@
 				<key>Replace</key>
 				<data>SEQgNjQ1MA==</data>
 			</dict>
-		</array>
+            <dict>
+                <key>Comment</key>
+                <string>Patch 8 apples</string>
+                <key>Disabled</key>
+                <true/>
+                <key>Find</key>
+                <data>AQAAdSI=</data>
+                <key>MatchOS</key>
+                <string>10.13</string>
+                <key>Name</key>
+                <string>IOGraphicsFamily</string>
+                <key>Replace</key>
+                <data>AQAA6yI=</data>
+            </dict>
+        </array>
 		<key>KernelXCPM</key>
 		<false/>
 		<key>PanicNoKextDump</key>
