--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,7 @@ toolchain/
 /CloverPackage/CloverV2/EFI/BOOT/BOOTIA32.efi
 /CloverPackage/CloverV2/EFI/BOOT/BOOTX64.efi
 /CloverPackage/CloverV2/EFI/CLOVER/CLOVERX64.efi
+/CloverPackage/CloverV2/EFI/CLOVER/CLOVERX64-test.efi
 /CloverPackage/CloverV2/EFI/CLOVER/CLOVERIA32.efi
 /CloverPackage/CloverV2/EFI/CLOVER/drivers/
 /CloverPackage/CloverV2/EFI/CLOVER/drivers32/
