--- a/CloverPackage/utils/Makefile
+++ b/CloverPackage/utils/Makefile
@@ -2,6 +2,6 @@
 include $(CURDIR)/Make.rules
 #fdisk440 out
 #clover-genconfig temporary out
-SUBDIRS = boot1-install partutil bdmesg clover-genconfig espfinder
+SUBDIRS = boot1-install partutil bdmesg espfinder
 
 all: all-recursive
