--- a/CloverPackage/CloverV2/EFI/CLOVER/config-sample.plist
+++ b/CloverPackage/CloverV2/EFI/CLOVER/config-sample.plist
@@ -453,6 +453,12 @@
 				<true/>
 				<key>Procedure</key>
 				<string>_lapic_interrupt</string>
+				<key>RangeFind</key>
+				<integer>200</integer>
+				<key>StartPattern</key>
+				<data>ACnHeAAx241H+oM=</data>
+				<key>MaskStart</key>
+				<data>/////wA=</data>
 				<key>Find</key>
 				<data>6AAA//+DAAAAAAAA</data>
 				<key>MaskFind</key>
@@ -461,8 +467,6 @@
 				<data>6AAA//8xwJCQkJCQ</data>
 				<key>MaskReplace</key>
 				<data>/wAA////////////</data>
-				<key>RangeFind</key>
-				<integer>200</integer>
 			</dict>
 		</array>
 		<key>#ForceKextsToLoad</key>
