define defaults when gruop is absent
Signed-off-by: SergeySlice <sergey.slice@gmail.com>

--- a/CloverPackage/CloverV2/EFI/CLOVER/config-sample.plist
+++ b/CloverPackage/CloverV2/EFI/CLOVER/config-sample.plist
@@ -796,6 +796,8 @@
 		</dict>
 		<key>#TextOnly</key>
 		<false/>
+		<key>ProvideConsoleGop</key>
+		<true/>
 		<key>#ConsoleMode</key>
 		<string>0</string>
 		<key>#Custom</key>
