SETTINGS_DATA refactoring.

--- a/Xcode/CloverX64TestNewParser/config-test1.plist
+++ b/Xcode/CloverX64TestNewParser/config-test1.plist
@@ -533,6 +533,8 @@
 							<string>arg2</string>
 							<key>FullTitle</key>
 							<string>title1</string>
+							<key>Settings</key>
+							<string>settingsSub</string>
 							<key>SubEntries</key>
 							<array>
 								<dict>
