Create REFIT_MAINMENU_SCREEN class Create CUSTOM_LOADER_SUBENTRY_SETTINGS, CUSTOM_LOADER_SUBENTRY_SETTINGS and CUSTOM_LOADER_SUBENTRY. Clean the sub entries config.plist fields. Comment unused KernelAndKextPatcherInit, KernelAndKextsPatcherStart, CheckForFakeSMC Comment unused OSFLAG_WITHKEXTS and OSFLAG_CHECKFAKESMC

--- a/Xcode/CloverX64TestNewParser/config-test1.plist
+++ b/Xcode/CloverX64TestNewParser/config-test1.plist
@@ -511,7 +511,7 @@
 					<key>CustomLogo</key>
 					<string>Apple</string>
 					<key>Disabled</key>
-					<true/>
+					<false/>
 					<key>DriveImage</key>
 					<string>driveimage</string>
 					<key>FullTitle</key>
@@ -529,10 +529,12 @@
 					<key>SubEntries</key>
 					<array>
 						<dict>
+							<key>CustomLogo</key>
+							<string>WinRepairTool128x128.png</string>
 							<key>AddArguments</key>
 							<string>arg2</string>
 							<key>FullTitle</key>
-							<string>title1</string>
+							<string>title111</string>
 							<key>Settings</key>
 							<string>settingsSub</string>
 							<key>SubEntries</key>
@@ -560,7 +562,7 @@
 							<string>title2</string>
 						</dict>
 						<dict>
-							<key>AddArguments</key>
+							<key>Arguments</key>
 							<string>arg4</string>
 							<key>FullTitle</key>
 							<string>title3</string>
